// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpeechBubble /> should adopt any children 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  >
    <span>
      A Child
    </span>
  </Bubble__Bubble>
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "arrowHeight" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    height="1vw"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "backgroundColor" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    backgroundColor="#000"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    backgroundColor="#000"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "color" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    color="#fff"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "maxWidth" prop 1`] = `
<Container__Container
  maxWidth="10em"
>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "padding" prop 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
    padding="0 0px"
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should adopt the "showArrowBreakpoint" prop 1`] = `
<Container__Container
  showArrowBreakpoint="100px"
>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
    showArrowBreakpoint="100px"
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
    showBreakpoint="100px"
  />
</Container__Container>
`;

exports[`<SpeechBubble /> should render and match the snapshot 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the "isGhost" property should accept boolean "false" as value 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the "isGhost" property should accept boolean "true" as value 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={true}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={true}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the "makeAppear" property should accept boolean "false" as value 1`] = `
<Container__Container
  makeAppear={false}
>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the "makeAppear" property should accept boolean "true" as value 1`] = `
<Container__Container
  makeAppear={true}
>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the arrowPosition property should accept "bottom-left" as value 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-left"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the arrowPosition property should accept "bottom-right" as value 1`] = `
<Container__Container>
  <Bubble__Bubble
    arrowPosition="bottom-right"
    isGhost={false}
  />
  <Arrow
    arrowPosition="bottom-right"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the arrowPosition property should accept "top-left" as value 1`] = `
<Container__Container>
  <Arrow
    arrowPosition="top-left"
    isGhost={false}
  />
  <Bubble__Bubble
    arrowPosition="top-left"
    isGhost={false}
  />
</Container__Container>
`;

exports[`<SpeechBubble /> the arrowPosition property should accept "top-right" as value 1`] = `
<Container__Container>
  <Arrow
    arrowPosition="top-right"
    isGhost={false}
  />
  <Bubble__Bubble
    arrowPosition="top-right"
    isGhost={false}
  />
</Container__Container>
`;
